feat: 전체 유저 조회 API

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: admin
-    url: jdbc:mysql://umc-db.c15co4yvzlav.ap-northeast-2.rds.amazonaws.com/baemin?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://umc-db.c15co4yvzlav.ap-northeast-2.rds.amazonaws.com/baemin?serverTimezone=Asia/Seoul&useSSL=false
     password: 20190976sswu
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
