--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,9 @@ dependencies {
     implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.228')
     implementation 'com.amazonaws:aws-java-sdk-s3'
 
+    runtimeOnly 'org.webjars:bootstrap:4.5.0'
 }
+
 
 tasks.named('test') {
     useJUnitPlatform()
