--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.umc'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 configurations {
     compileOnly {
@@ -31,9 +31,9 @@ dependencies {
     implementation ('org.webjars:jquery-ui:1.11.4')
 
     // Lombok
-    implementation ('org.projectlombok:lombok')
-    compileOnly ('org.projectlombok:lombok:1.18.16')
-    annotationProcessor ('org.projectlombok:lombok:1.18.16')
+    implementation 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
