--- a/appspec.yml
+++ b/appspec.yml
@@ -14,10 +14,10 @@ permissions:
 
 hooks:
   AfterInstall:
-    - location: scripts/stop.sh
+    - location: script/stop.sh
       timeout: 60
       runas: ubuntu
   ApplicationStart:
-    - location: scripts/start.sh
+    - location: script/start.sh
       timeout: 60
       runas: ubuntu
